/* OrderFlow SQL Server 2019+ schema, constraints, indexes and representative sample data. */
IF DB_ID(N'OrderFlowDb') IS NULL CREATE DATABASE OrderFlowDb;
GO
USE OrderFlowDb;
GO
CREATE TABLE dbo.Roles (RoleId INT NOT NULL PRIMARY KEY, Name NVARCHAR(50) NOT NULL UNIQUE, Description NVARCHAR(250) NULL);
CREATE TABLE dbo.Customers (CustomerId INT IDENTITY(1,1) NOT NULL PRIMARY KEY, CompanyName NVARCHAR(160) NOT NULL, ContactName NVARCHAR(120) NOT NULL, Email NVARCHAR(120) NOT NULL, Phone NVARCHAR(40) NULL, AddressLine1 NVARCHAR(250) NULL, City NVARCHAR(120) NULL, StateOrRegion NVARCHAR(80) NULL, PostalCode NVARCHAR(20) NULL, Country NVARCHAR(80) NULL, Status INT NOT NULL CONSTRAINT CK_Customers_Status CHECK (Status IN (1,2,3)), CreatedAtUtc DATETIME2 NOT NULL CONSTRAINT DF_Customers_CreatedAt DEFAULT SYSUTCDATETIME());
CREATE TABLE dbo.Users (UserId INT IDENTITY(1,1) NOT NULL PRIMARY KEY, Email NVARCHAR(100) NOT NULL UNIQUE, DisplayName NVARCHAR(120) NOT NULL, PasswordHash NVARCHAR(512) NOT NULL, PasswordSalt NVARCHAR(128) NOT NULL, RoleId INT NOT NULL, CustomerId INT NULL, IsActive BIT NOT NULL CONSTRAINT DF_Users_Active DEFAULT 1, CreatedAtUtc DATETIME2 NOT NULL CONSTRAINT DF_Users_CreatedAt DEFAULT SYSUTCDATETIME(), LastLoginUtc DATETIME2 NULL, CONSTRAINT FK_Users_Roles FOREIGN KEY(RoleId) REFERENCES dbo.Roles(RoleId), CONSTRAINT FK_Users_Customers FOREIGN KEY(CustomerId) REFERENCES dbo.Customers(CustomerId));
CREATE TABLE dbo.Categories (CategoryId INT IDENTITY(1,1) NOT NULL PRIMARY KEY, Name NVARCHAR(100) NOT NULL UNIQUE, Description NVARCHAR(400) NULL, IsActive BIT NOT NULL CONSTRAINT DF_Categories_Active DEFAULT 1);
CREATE TABLE dbo.Products (ProductId INT IDENTITY(1,1) NOT NULL PRIMARY KEY, CategoryId INT NOT NULL, Sku NVARCHAR(50) NOT NULL UNIQUE, Name NVARCHAR(150) NOT NULL, Description NVARCHAR(1000) NULL, UnitPrice MONEY NOT NULL CONSTRAINT CK_Products_UnitPrice CHECK(UnitPrice > 0), ReorderLevel INT NOT NULL CONSTRAINT CK_Products_ReorderLevel CHECK(ReorderLevel >= 0), Status INT NOT NULL CONSTRAINT CK_Products_Status CHECK(Status IN (1,2,3)), CreatedAtUtc DATETIME2 NOT NULL CONSTRAINT DF_Products_CreatedAt DEFAULT SYSUTCDATETIME(), UpdatedAtUtc DATETIME2 NOT NULL CONSTRAINT DF_Products_UpdatedAt DEFAULT SYSUTCDATETIME(), CONSTRAINT FK_Products_Categories FOREIGN KEY(CategoryId) REFERENCES dbo.Categories(CategoryId));
CREATE TABLE dbo.Inventory (InventoryId INT IDENTITY(1,1) NOT NULL PRIMARY KEY, ProductId INT NOT NULL UNIQUE, QuantityOnHand INT NOT NULL CONSTRAINT CK_Inventory_OnHand CHECK(QuantityOnHand >= 0), ReservedQuantity INT NOT NULL CONSTRAINT CK_Inventory_Reserved CHECK(ReservedQuantity >= 0 AND ReservedQuantity <= QuantityOnHand), UpdatedAtUtc DATETIME2 NOT NULL CONSTRAINT DF_Inventory_UpdatedAt DEFAULT SYSUTCDATETIME(), RowVersion ROWVERSION NOT NULL, CONSTRAINT FK_Inventory_Products FOREIGN KEY(ProductId) REFERENCES dbo.Products(ProductId));
CREATE TABLE dbo.Orders (OrderId INT IDENTITY(1,1) NOT NULL PRIMARY KEY, OrderNumber NVARCHAR(30) NOT NULL UNIQUE, CustomerId INT NOT NULL, SalesExecutiveUserId INT NULL, Status INT NOT NULL CONSTRAINT CK_Orders_Status CHECK(Status IN (1,2,3,4,5,6,7)), Subtotal MONEY NOT NULL, TaxRate DECIMAL(9,6) NOT NULL CONSTRAINT CK_Orders_TaxRate CHECK(TaxRate BETWEEN 0 AND 1), TaxAmount MONEY NOT NULL, TotalAmount MONEY NOT NULL, ShippingAddress NVARCHAR(500) NULL, Notes NVARCHAR(1000) NULL, CreatedAtUtc DATETIME2 NOT NULL CONSTRAINT DF_Orders_CreatedAt DEFAULT SYSUTCDATETIME(), ConfirmedAtUtc DATETIME2 NULL, ShippedAtUtc DATETIME2 NULL, CompletedAtUtc DATETIME2 NULL, CONSTRAINT FK_Orders_Customers FOREIGN KEY(CustomerId) REFERENCES dbo.Customers(CustomerId), CONSTRAINT FK_Orders_SalesUsers FOREIGN KEY(SalesExecutiveUserId) REFERENCES dbo.Users(UserId));
CREATE TABLE dbo.OrderItems (OrderItemId INT IDENTITY(1,1) NOT NULL PRIMARY KEY, OrderId INT NOT NULL, ProductId INT NOT NULL, Quantity INT NOT NULL CONSTRAINT CK_OrderItems_Quantity CHECK(Quantity > 0), UnitPrice MONEY NOT NULL, LineSubtotal MONEY NOT NULL, TaxAmount MONEY NOT NULL, LineTotal MONEY NOT NULL, CONSTRAINT UQ_OrderItems_OrderProduct UNIQUE(OrderId, ProductId), CONSTRAINT FK_OrderItems_Orders FOREIGN KEY(OrderId) REFERENCES dbo.Orders(OrderId), CONSTRAINT FK_OrderItems_Products FOREIGN KEY(ProductId) REFERENCES dbo.Products(ProductId));
CREATE TABLE dbo.InventoryTransactions (InventoryTransactionId INT IDENTITY(1,1) NOT NULL PRIMARY KEY, ProductId INT NOT NULL, OrderId INT NULL, PerformedByUserId INT NULL, Type INT NOT NULL CONSTRAINT CK_InventoryTransactions_Type CHECK(Type IN (1,2,3,4,5,6)), QuantityDelta INT NOT NULL, QuantityBefore INT NOT NULL, QuantityAfter INT NOT NULL, Notes NVARCHAR(500) NOT NULL, CreatedAtUtc DATETIME2 NOT NULL CONSTRAINT DF_InventoryTransactions_CreatedAt DEFAULT SYSUTCDATETIME(), CONSTRAINT FK_InventoryTransactions_Products FOREIGN KEY(ProductId) REFERENCES dbo.Products(ProductId), CONSTRAINT FK_InventoryTransactions_Orders FOREIGN KEY(OrderId) REFERENCES dbo.Orders(OrderId), CONSTRAINT FK_InventoryTransactions_Users FOREIGN KEY(PerformedByUserId) REFERENCES dbo.Users(UserId));
CREATE TABLE dbo.CustomerRequests (CustomerRequestId INT IDENTITY(1,1) NOT NULL PRIMARY KEY, RequestNumber NVARCHAR(30) NOT NULL UNIQUE, CustomerId INT NOT NULL, OrderId INT NULL, AssignedEmployeeUserId INT NULL, Type INT NOT NULL CONSTRAINT CK_CustomerRequests_Type CHECK(Type IN (1,2,3,4,5)), Priority INT NOT NULL CONSTRAINT CK_CustomerRequests_Priority CHECK(Priority IN (1,2,3,4)), Status INT NOT NULL CONSTRAINT CK_CustomerRequests_Status CHECK(Status IN (1,2,3,4,5)), Description NVARCHAR(1600) NOT NULL, Resolution NVARCHAR(1600) NULL, SubmittedAtUtc DATETIME2 NOT NULL CONSTRAINT DF_CustomerRequests_SubmittedAt DEFAULT SYSUTCDATETIME(), ResolvedAtUtc DATETIME2 NULL, CONSTRAINT FK_CustomerRequests_Customers FOREIGN KEY(CustomerId) REFERENCES dbo.Customers(CustomerId), CONSTRAINT FK_CustomerRequests_Orders FOREIGN KEY(OrderId) REFERENCES dbo.Orders(OrderId), CONSTRAINT FK_CustomerRequests_Users FOREIGN KEY(AssignedEmployeeUserId) REFERENCES dbo.Users(UserId));
CREATE TABLE dbo.RequestHistory (RequestHistoryId INT IDENTITY(1,1) NOT NULL PRIMARY KEY, CustomerRequestId INT NOT NULL, AuthorUserId INT NULL, PreviousStatus INT NULL, NewStatus INT NULL, Message NVARCHAR(1600) NOT NULL, IsVisibleToCustomer BIT NOT NULL CONSTRAINT DF_RequestHistory_Visible DEFAULT 1, CreatedAtUtc DATETIME2 NOT NULL CONSTRAINT DF_RequestHistory_CreatedAt DEFAULT SYSUTCDATETIME(), CONSTRAINT FK_RequestHistory_Requests FOREIGN KEY(CustomerRequestId) REFERENCES dbo.CustomerRequests(CustomerRequestId), CONSTRAINT FK_RequestHistory_Users FOREIGN KEY(AuthorUserId) REFERENCES dbo.Users(UserId));
CREATE TABLE dbo.AuditEvents (AuditEventId BIGINT IDENTITY(1,1) NOT NULL PRIMARY KEY, UserId INT NULL, EntityType NVARCHAR(80) NOT NULL, EntityId NVARCHAR(80) NOT NULL, Action INT NOT NULL, Detail NVARCHAR(4000) NULL, CreatedAtUtc DATETIME2 NOT NULL CONSTRAINT DF_AuditEvents_CreatedAt DEFAULT SYSUTCDATETIME(), CONSTRAINT FK_AuditEvents_Users FOREIGN KEY(UserId) REFERENCES dbo.Users(UserId));
GO
CREATE INDEX IX_Customers_CompanyName ON dbo.Customers(CompanyName); CREATE INDEX IX_Products_Name ON dbo.Products(Name); CREATE INDEX IX_Orders_Customer_Status_Created ON dbo.Orders(CustomerId, Status, CreatedAtUtc DESC); CREATE INDEX IX_InventoryTransactions_Product_Created ON dbo.InventoryTransactions(ProductId, CreatedAtUtc DESC); CREATE INDEX IX_CustomerRequests_Status_Priority ON dbo.CustomerRequests(Status, Priority DESC, SubmittedAtUtc DESC); CREATE INDEX IX_AuditEvents_Entity ON dbo.AuditEvents(EntityType, EntityId, CreatedAtUtc DESC);
GO
INSERT dbo.Roles(RoleId, Name, Description) VALUES (1,N'Admin',N'Full system administration'),(2,N'SalesExecutive',N'Customer and order management'),(3,N'InventoryManager',N'Product and inventory management'),(4,N'Customer',N'Customer self-service access');
INSERT dbo.Customers(CompanyName,ContactName,Email,Phone,City,StateOrRegion,Country,Status) VALUES (N'Northstar Logistics',N'Ava Martinez',N'ava@northstar.example',N'+1 312 555 0148',N'Chicago',N'IL',N'United States',1),(N'Acme Health Systems',N'Priya Shah',N'priya@acmehealth.example',N'+1 415 555 0187',N'San Francisco',N'CA',N'United States',1);
INSERT dbo.Categories(Name,Description) VALUES (N'Network Equipment',N'Managed infrastructure components'),(N'Office Systems',N'Enterprise office equipment'),(N'Warehouse Supplies',N'Fulfilment and warehouse consumables');
INSERT dbo.Products(CategoryId,Sku,Name,UnitPrice,ReorderLevel,Status) VALUES (1,N'NET-SW-24P',N'24-Port Managed Switch',1249,12,1),(1,N'NET-AP-6E',N'Wi-Fi 6E Access Point',399,20,1),(2,N'OFF-DK-USB',N'USB-C Docking Station',219,30,1),(3,N'WH-THM-4X6',N'Thermal Shipping Labels 4x6',42,60,1);
INSERT dbo.Inventory(ProductId,QuantityOnHand,ReservedQuantity) VALUES (1,8,0),(2,58,4),(3,146,12),(4,38,0);
/* User credentials are intentionally seeded through Data/SeedData.cs so PBKDF2 passwords are unique and salted. */
GO
